with links added

--- a/app/views/nathashachabelnique/show.html.erb
+++ b/app/views/nathashachabelnique/show.html.erb
@@ -23,28 +23,27 @@
 
 
 		document.getElementById("slide-118").children[1].children[0].innerHTML = "Nathasha Chabelnique <a class=\"chabelnique.com\" href=\"http://www.chabelnique.com\">chabelnique.com</a><span class=\"slideshow-slide-expand-content\"></span>"
-
 		document.getElementById("slide-118").children[1].children[1].innerHTML = "Safari Lunaire"
 
-		document.getElementById("slide-119").children[1].children[0].innerHTML = "Nathasha Chabelnique <span class=\"slideshow-slide-expand-content\"></span>"
+		document.getElementById("slide-119").children[1].children[0].innerHTML = "Nathasha Chabelnique <a class=\"chabelnique.com\" href=\"http://www.chabelnique.com\">chabelnique.com</a><span class=\"slideshow-slide-expand-content\"></span>"
 		document.getElementById("slide-119").children[1].children[1].innerHTML = "Glamour Warrior"
 
-		document.getElementById("slide-120").children[1].children[0].innerHTML = "Nathasha Chabelnique <span class=\"slideshow-slide-expand-content\"></span>"
+		document.getElementById("slide-120").children[1].children[0].innerHTML = "Nathasha Chabelnique <a class=\"chabelnique.com\" href=\"http://www.chabelnique.com\">chabelnique.com</a><span class=\"slideshow-slide-expand-content\"></span>"
 		document.getElementById("slide-120").children[1].children[1].innerHTML = "Cosmic Nomade"
 
-		document.getElementById("slide-121").children[1].children[0].innerHTML = "Nathasha Chabelnique <span class=\"slideshow-slide-expand-content\"></span>"
+		document.getElementById("slide-121").children[1].children[0].innerHTML = "Nathasha Chabelnique <a class=\"chabelnique.com\" href=\"http://www.chabelnique.com\">chabelnique.com</a><span class=\"slideshow-slide-expand-content\"></span>"
 		document.getElementById("slide-121").children[1].children[1].innerHTML = "Claire de Lune"
 
-		document.getElementById("slide-122").children[1].children[0].innerHTML = "Nathasha Chabelnique <span class=\"slideshow-slide-expand-content\"></span>"
+		document.getElementById("slide-122").children[1].children[0].innerHTML = "Nathasha Chabelnique <a class=\"chabelnique.com\" href=\"http://www.chabelnique.com\">chabelnique.com</a><span class=\"slideshow-slide-expand-content\"></span>"
 		document.getElementById("slide-122").children[1].children[1].innerHTML = "Stella"
 
-		document.getElementById("slide-123").children[1].children[0].innerHTML = "Nathasha Chabelnique <span class=\"slideshow-slide-expand-content\"></span>"
+		document.getElementById("slide-123").children[1].children[0].innerHTML = "Nathasha Chabelnique <a class=\"chabelnique.com\" href=\"http://www.chabelnique.com\">chabelnique.com</a><span class=\"slideshow-slide-expand-content\"></span>"
 		document.getElementById("slide-123").children[1].children[1].innerHTML = "Fruit Lunaire"
 
-		document.getElementById("slide-124").children[1].children[0].innerHTML = "Nathasha Chabelnique <span class=\"slideshow-slide-expand-content\"></span>"
+		document.getElementById("slide-124").children[1].children[0].innerHTML = "Nathasha Chabelnique <a class=\"chabelnique.com\" href=\"http://www.chabelnique.com\">chabelnique.com</a><span class=\"slideshow-slide-expand-content\"></span>"
 		document.getElementById("slide-124").children[1].children[1].innerHTML = "Mollusk"
 
-		document.getElementById("slide-125").children[1].children[0].innerHTML = "Nathasha Chabelnique <span class=\"slideshow-slide-expand-content\"></span>"
+		document.getElementById("slide-125").children[1].children[0].innerHTML = "Nathasha Chabelnique <a class=\"chabelnique.com\" href=\"http://www.chabelnique.com\">chabelnique.com</a><span class=\"slideshow-slide-expand-content\"></span>"
 		document.getElementById("slide-125").children[1].children[1].innerHTML = "Star Dust"
 
 
